// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c20 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c57 {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c69 {
  background: #ffffff;
  padding: 16px;
}

.c16 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c13 {
  padding-right: 8px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c14 {
  height: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c11 .c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c15 {
  color: #ffffff;
}

.c11[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true'] .c15 {
  color: #666687;
}

.c11[aria-disabled='true'] svg > g,
.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c11[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true']:active .c15 {
  color: #666687;
}

.c11[aria-disabled='true']:active svg > g,
.c11[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c11:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c11:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c48 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c48:focus {
  outline: none;
}

.c48[aria-disabled='true'] {
  cursor: not-allowed;
}

.c51 {
  padding-right: 16px;
  padding-left: 16px;
}

.c53 {
  padding-left: 12px;
}

.c41 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c49 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c43 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c45 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c52 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c46 {
  line-height: 0;
}

.c42 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c42 > * + * {
  margin-top: 4px;
}

.c47 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c47:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c54 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c54 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c54 svg path {
  fill: #666687;
}

.c55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c55 svg {
  width: 0.375rem;
}

.c50 {
  width: 100%;
}

.c18 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c19 > * + * {
  margin-top: 24px;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 16px;
}

.c25 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c27 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c29 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c30 {
  line-height: 0;
}

.c33 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c33::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33[aria-disabled='true'] {
  color: inherit;
}

.c33:focus {
  outline: none;
  box-shadow: none;
}

.c32 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c32:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 4px;
}

.c35 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c38 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c39 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c39:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c40::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c40:focus-within {
  outline: none;
}

.c36 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c36 > * + * {
  margin-top: 4px;
}

.c34 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c34 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c22 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c56 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c91 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c0:focus-visible {
  outline: none;
}

.c23 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c24 {
  grid-column: span 6;
  max-width: 100%;
}

.c65 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c68 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c63 {
  background: #ffffff;
  padding: 16px;
}

.c66 {
  background: #f6f6f9;
  padding: 12px;
}

.c58 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c64 {
  border-bottom: 1px solid #ffffff;
}

.c67 {
  border-bottom: 1px solid #eaeaef;
}

.c61 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c60 + .c60 > .c62 {
  border-left: 1px solid #eaeaef;
}

.c61 .c62 {
  border-right: none;
}

.c61[aria-disabled='true'] {
  cursor: not-allowed;
}

.c59 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c59 .c60:first-of-type .c62 {
  border-radius: 4px 0 0 0;
}

.c59 .c60:last-of-type .c62 {
  border-radius: 0 4px 0 0;
}

.c59 .c60[aria-selected="true"] .c62 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c83 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c84 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c70 {
  border-radius: 4px;
}

.c73 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c76 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c79 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c85 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c87 {
  color: #666687;
  width: 0.6875rem;
}

.c90 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c74 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c77 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c86 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c71 {
  border: 1px solid #f6f6f9;
}

.c71:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c71:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c71:hover:not([aria-disabled='true']) .c82 {
  color: #4945ff;
}

.c71:hover:not([aria-disabled='true']) > .c72 {
  background: #f0f0ff;
}

.c71:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c89 {
  border: 1px solid #ffffff;
}

.c89:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c89:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c89:hover:not([aria-disabled='true']) .c82 {
  color: #4945ff;
}

.c89:hover:not([aria-disabled='true']) > .c72 {
  background: #f0f0ff;
}

.c89:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c80 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c80[aria-disabled='true'] {
  pointer-events: none;
}

.c80[aria-disabled='true'] svg path {
  fill: #666687;
}

.c80 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c80 svg path {
  fill: #4945ff;
}

.c80:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c80:focus-visible {
  outline: none;
}

.c80:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c78 > * {
  margin-left: 0;
  margin-right: 0;
}

.c78 > * + * {
  margin-left: 12px;
}

.c88 path {
  fill: #666687;
}

.c81 {
  text-align: left;
}

.c81 > span {
  max-width: 100%;
}

.c81 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c81 svg path {
  fill: #8e8ea9;
}

.c75 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c75:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c24 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c24 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div>
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                Create API Token
              </h1>
            </div>
            <button
              aria-disabled="false"
              class="c10 c11"
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c12 c13 c14"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c15 c16"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18 c19"
          spacing="6"
        >
          <div
            class="c20"
          >
            <div
              class="c18 c21"
              spacing="4"
            >
              <h2
                class="c22"
              >
                Details
              </h2>
              <div
                class="c23"
              >
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c25 c26"
                          spacing="1"
                        >
                          <label
                            class="c27"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c28"
                            >
                              Name
                              <span
                                class="c29 c30"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c31 c32"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c33"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c34"
                    >
                      <div>
                        <div
                          class="c35 c36"
                          spacing="1"
                        >
                          <div
                            class="c37"
                          >
                            <label
                              class="c38"
                              for="textarea-1"
                            >
                              <div
                                class="c37"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c39"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c40"
                              id="textarea-1"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c41 c42"
                        spacing="1"
                      >
                        <span
                          class="c43"
                          for="select-1"
                          id="select-1-label"
                          required=""
                        >
                          <div
                            class="c44"
                          >
                            Token duration
                            <span
                              class="c45 c46"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c44 c47"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-1-label select-1-content"
                            class="c48"
                            id="select-1"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c49 c50"
                          >
                            <div
                              class="c44"
                            >
                              <div
                                class="c51"
                              >
                                <span
                                  class="c52"
                                  id="select-1-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c44"
                            >
                              <button
                                aria-hidden="true"
                                class="c53 c54 c55"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c56"
                    />
                  </div>
                </div>
                <div
                  class="c24"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c41 c42"
                        spacing="1"
                      >
                        <span
                          class="c43"
                          for="select-2"
                          id="select-2-label"
                          required=""
                        >
                          <div
                            class="c44"
                          >
                            Token type
                            <span
                              class="c45 c46"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c44 c47"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-2-label select-2-content"
                            class="c48"
                            id="select-2"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c49 c50"
                          >
                            <div
                              class="c44"
                            >
                              <div
                                class="c51"
                              >
                                <span
                                  class="c52"
                                  id="select-2-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c44"
                            >
                              <button
                                aria-hidden="true"
                                class="c53 c54 c55"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c57"
          >
            <div>
              <div
                aria-label="Tabs Permissions"
                class="c58 c59"
                role="tablist"
              >
                <button
                  aria-controls="tabs-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c60 c61"
                  id="tabs-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c62 c63 c64"
                  >
                    <span
                      class="c65"
                    >
                      Collection Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c60 c61"
                  id="tabs-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c62 c66 c67"
                  >
                    <span
                      class="c68"
                    >
                      Single Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c60 c61"
                  id="tabs-2-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c62 c66 c67"
                  >
                    <span
                      class="c68"
                    >
                      Custom
                    </span>
                  </div>
                </button>
              </div>
              <div
                style="position: relative;"
              >
                <div
                  aria-labelledby="tabs-0-tab"
                  id="tabs-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <div
                    class="c69"
                  >
                    <div
                      aria-disabled="false"
                      class="c70 c71"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c72 c73 c74 c75"
                        cursor=""
                      >
                        <div
                          class="c72 c76 c77 c78"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-1"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-1"
                            class="c72 c79 c77 c80 c81"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c82 c83"
                            >
                              <span
                                class="c82 sc-wAsCI c84"
                                id="accordion-label-accordion-1"
                              >
                                Category
                              </span>
                            </span>
                          </button>
                          <div
                            class="c72 c77 c78"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c72 c85 c86"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c87 c88"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      class="c70 c89"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c72 c90 c74 c75"
                        cursor=""
                      >
                        <div
                          class="c72 c76 c77 c78"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-2"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-2"
                            class="c72 c79 c77 c80 c81"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c82 c83"
                            >
                              <span
                                class="c82 sc-wAsCI c84"
                                id="accordion-label-accordion-2"
                              >
                                Country
                              </span>
                            </span>
                          </button>
                          <div
                            class="c72 c77 c78"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c72 c85 c86"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c87 c88"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c91"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c28 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c68 {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c80 {
  background: #ffffff;
  padding: 16px;
}

.c16 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c13 {
  padding-right: 8px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c14 {
  height: 100%;
}

.c103 .c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c103 .c15 {
  color: #ffffff;
}

.c103[aria-disabled='true'] .c15 {
  color: #666687;
}

.c103[aria-disabled='true']:active .c15 {
  color: #666687;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c11 .c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 .c15 {
  color: #ffffff;
}

.c11[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true'] .c15 {
  color: #666687;
}

.c11[aria-disabled='true'] svg > g,
.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c11[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c11[aria-disabled='true']:active .c15 {
  color: #666687;
}

.c11[aria-disabled='true']:active svg > g,
.c11[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c11:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c11:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c11 svg > g,
.c11 svg path {
  fill: #ffffff;
}

.c20 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c22 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c56 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c56:focus {
  outline: none;
}

.c56[aria-disabled='true'] {
  cursor: not-allowed;
}

.c59 {
  padding-right: 16px;
  padding-left: 16px;
}

.c61 {
  padding-left: 12px;
}

.c49 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c52 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c57 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c51 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c53 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c60 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c66 {
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c54 {
  line-height: 0;
}

.c50 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c50 > * + * {
  margin-top: 4px;
}

.c55 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c55:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c65 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c65:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c62 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c62 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c62 svg path {
  fill: #666687;
}

.c63 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c63 svg {
  width: 0.375rem;
}

.c67 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c67 svg {
  width: 0.375rem;
}

.c58 {
  width: 100%;
}

.c18 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c19 > * + * {
  margin-top: 24px;
}

.c24 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c24 > * + * {
  margin-top: 4px;
}

.c29 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c29 > * + * {
  margin-top: 16px;
}

.c33 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c36 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c39 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c35 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c37 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c38 {
  line-height: 0;
}

.c41 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41[aria-disabled='true'] {
  color: inherit;
}

.c41:focus {
  outline: none;
  box-shadow: none;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c34 > * + * {
  margin-top: 4px;
}

.c43 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c45 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c46 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c47 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c47:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c48 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c48::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c48::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c48:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c48::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c48:focus-within {
  outline: none;
}

.c44 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c44 > * + * {
  margin-top: 4px;
}

.c42 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c42 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c42 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c42 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c42 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c25 {
  font-weight: 500;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c27 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c30 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c64 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c6 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c23 {
  margin-right: 24px;
}

.c23 svg {
  width: 2rem;
  height: 2rem;
}

.c26 {
  word-break: break-all;
}

.c102 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c0:focus-visible {
  outline: none;
}

.c31 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c32 {
  grid-column: span 6;
  max-width: 100%;
}

.c76 {
  font-weight: 600;
  color: #271fe0;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c79 {
  font-weight: 600;
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c74 {
  background: #ffffff;
  padding: 16px;
}

.c77 {
  background: #f6f6f9;
  padding: 12px;
}

.c69 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c75 {
  border-bottom: 1px solid #ffffff;
}

.c78 {
  border-bottom: 1px solid #eaeaef;
}

.c72 {
  border: none;
  background: transparent;
  padding: 0;
  outline-offset: -2px;
}

.c71 + .c71 > .c73 {
  border-left: 1px solid #eaeaef;
}

.c72 .c73 {
  border-right: none;
}

.c72[aria-disabled='true'] {
  cursor: not-allowed;
}

.c70 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c70 .c71:first-of-type .c73 {
  border-radius: 4px 0 0 0;
}

.c70 .c71:last-of-type .c73 {
  border-radius: 0 4px 0 0;
}

.c70 .c71[aria-selected="true"] .c73 {
  border-radius: 4px 4px 0 0;
  border-left: none;
  border-right: none;
}

.c94 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c95 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c81 {
  border-radius: 4px;
}

.c84 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c87 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c90 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c96 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c98 {
  color: #666687;
  width: 0.6875rem;
}

.c101 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c85 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c88 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c97 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c82 {
  border: 1px solid #f6f6f9;
}

.c82:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c82:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c82:hover:not([aria-disabled='true']) .c93 {
  color: #4945ff;
}

.c82:hover:not([aria-disabled='true']) > .c83 {
  background: #f0f0ff;
}

.c82:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c100 {
  border: 1px solid #ffffff;
}

.c100:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c100:hover:not([aria-disabled='true']) .sc-wAsCI {
  color: #271fe0;
}

.c100:hover:not([aria-disabled='true']) .c93 {
  color: #4945ff;
}

.c100:hover:not([aria-disabled='true']) > .c83 {
  background: #f0f0ff;
}

.c100:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c91 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c91[aria-disabled='true'] {
  pointer-events: none;
}

.c91[aria-disabled='true'] svg path {
  fill: #666687;
}

.c91 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c91 svg path {
  fill: #4945ff;
}

.c91:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c91:focus-visible {
  outline: none;
}

.c91:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c89 > * {
  margin-left: 0;
  margin-right: 0;
}

.c89 > * + * {
  margin-left: 12px;
}

.c99 path {
  fill: #666687;
}

.c92 {
  text-align: left;
}

.c92 > span {
  max-width: 100%;
}

.c92 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c92 svg path {
  fill: #8e8ea9;
}

.c86 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c86:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c32 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c32 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                My super token
              </h1>
            </div>
            <button
              aria-disabled="false"
              class="c10 c11"
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c12 c13 c14"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c15 c16"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18 c19"
          spacing="6"
        >
          <div
            class="c20 c21"
          >
            <div
              class="c22 c21 c23"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c18 c24"
              spacing="1"
            >
              <div
                class="c21"
              >
                <span
                  class="c25 c26"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c27"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c28"
          >
            <div
              class="c18 c29"
              spacing="4"
            >
              <h2
                class="c30"
              >
                Details
              </h2>
              <div
                class="c31"
              >
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c33 c34"
                          spacing="1"
                        >
                          <label
                            class="c35"
                            for="textinput-2"
                            required=""
                          >
                            <div
                              class="c36"
                            >
                              Name
                              <span
                                class="c37 c38"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c39 c40"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c41"
                              id="textinput-2"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c42"
                    >
                      <div>
                        <div
                          class="c43 c44"
                          spacing="1"
                        >
                          <div
                            class="c45"
                          >
                            <label
                              class="c46"
                              for="textarea-2"
                            >
                              <div
                                class="c45"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c47"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c48"
                              id="textarea-2"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c49 c50"
                        spacing="1"
                      >
                        <span
                          class="c51"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c52"
                          >
                            Token duration
                            <span
                              class="c53 c54"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c52 c55"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c56"
                            id="select-3"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c57 c58"
                          >
                            <div
                              class="c52"
                            >
                              <div
                                class="c59"
                              >
                                <span
                                  class="c60"
                                  id="select-3-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c52"
                            >
                              <button
                                aria-hidden="true"
                                class="c61 c62 c63"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c64"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c32"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c49 c50"
                        spacing="1"
                      >
                        <span
                          class="c51"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c52"
                          >
                            Token type
                            <span
                              class="c53 c54"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c52 c65"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c56"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c57 c58"
                          >
                            <div
                              class="c52"
                            >
                              <div
                                class="c59"
                              >
                                <span
                                  class="c66"
                                  id="select-4-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c52"
                            >
                              <button
                                aria-hidden="true"
                                class="c61 c62 c67"
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c68"
          >
            <div>
              <div
                aria-label="Tabs Permissions"
                class="c69 c70"
                role="tablist"
              >
                <button
                  aria-controls="tabs-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c71 c72"
                  id="tabs-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c73 c74 c75"
                  >
                    <span
                      class="c76"
                    >
                      Collection Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c71 c72"
                  id="tabs-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c73 c77 c78"
                  >
                    <span
                      class="c79"
                    >
                      Single Types
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c71 c72"
                  id="tabs-2-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c73 c77 c78"
                  >
                    <span
                      class="c79"
                    >
                      Custom
                    </span>
                  </div>
                </button>
              </div>
              <div
                style="position: relative;"
              >
                <div
                  aria-labelledby="tabs-0-tab"
                  id="tabs-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <div
                    class="c80"
                  >
                    <div
                      aria-disabled="false"
                      class="c81 c82"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c83 c84 c85 c86"
                        cursor=""
                      >
                        <div
                          class="c83 c87 c88 c89"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-3"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-3"
                            class="c83 c90 c88 c91 c92"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c93 c94"
                            >
                              <span
                                class="c93 sc-wAsCI c95"
                                id="accordion-label-accordion-3"
                              >
                                Category
                              </span>
                            </span>
                          </button>
                          <div
                            class="c83 c88 c89"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c83 c96 c97"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c98 c99"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      class="c81 c100"
                      data-strapi-expanded="false"
                    >
                      <div
                        class="c83 c101 c85 c86"
                        cursor=""
                      >
                        <div
                          class="c83 c87 c88 c89"
                          spacing="3"
                        >
                          <button
                            aria-controls="accordion-content-accordion-4"
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-labelledby="accordion-label-accordion-4"
                            class="c83 c90 c88 c91 c92"
                            data-strapi-accordion-toggle="true"
                            type="button"
                          >
                            <span
                              class="c93 c94"
                            >
                              <span
                                class="c93 sc-wAsCI c95"
                                id="accordion-label-accordion-4"
                              >
                                Country
                              </span>
                            </span>
                          </button>
                          <div
                            class="c83 c88 c89"
                            spacing="3"
                          >
                            <span
                              aria-hidden="true"
                              class="c83 c96 c97"
                              cursor="pointer"
                              data-strapi-dropdown="true"
                              height="2rem"
                              width="2rem"
                            >
                              <svg
                                class="c98 c99"
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="0.6875rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c102"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
